# Quake-2

./: .gitignore  CMakeLists.txt
baseq2/: config.cfg
client/: CMakeLists.txt  cl_cin.c  cl_ents.c  cl_fx.c  cl_input.c  cl_main.c  cl_newfx.c  cl_parse.c  cl_scrn.c  cl_tent.c  cl_view.c  client.h  console.c  keys.c  menu.c  music.h  qmenu.c  ref.h  snd_dma.c  snd_mem.c  snd_mix.c
ctf/: CMakeLists.txt  g_local.h  g_main.c  game.h  q_shared.h
data/: config.cfg
data/maps/: gym.bsp  gym.map
data/pics/: ch1.pcx  colormap.pcx  conback.pcx  conchars.pcx  pause.pcx
data/textures/gym/: blue.pcx  brown.pcx  gold.pcx  gray.pcx  green.pcx  red.pcx  white.pcx
game/: CMakeLists.txt  g_cmds.c  g_combat.c  g_entity.c  g_items.c  g_local.h  g_main.c  g_monster.c  g_spawn.c  g_svcmds.c  game.h  p_client.c  p_hud.c  p_view.c  q_shared.c  q_shared.h
linux/: vid_so.c
platform/: CMakeLists.txt  glimp_sdl.c  glimp_sdl.h  in_null.c  music_null.c  net_enet.c  q_shsdl.c  qgl_sdl.c  sys_sdl.c  vid_null.c
qcommon/: CMakeLists.txt  cmd.c  cmodel.c  common.c  cvar.c  files.c  net_chan.c  qcommon.h
ref_gl/: CMakeLists.txt  gl_image.c  gl_local.h  gl_mesh.c  gl_model.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  qgl.h
server/: CMakeLists.txt  sv_ccmds.c  sv_ents.c  sv_game.c  sv_init.c  sv_main.c  sv_send.c  sv_world.c
tools/: CMakeLists.txt
tools/common/: cmdlib.c
win32/: CMakeLists.txt  cd_win.c  glw_imp.c  in_win.c  music_win.c  net_wins.c  sys_win.c  vid_dll.c
